--- a/src/IrradiationFrame.form
+++ b/src/IrradiationFrame.form
@@ -73,6 +73,8 @@
                   <Component id="jLabel_status" min="-2" pref="73" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
                   <Component id="jB_connectToRio" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <Component id="jCB_basic" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
@@ -84,6 +86,7 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel_status" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jB_connectToRio" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="jCB_basic" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -106,6 +109,11 @@
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jB_connectToRioActionPerformed"/>
           </Events>
+        </Component>
+        <Component class="javax.swing.JCheckBox" name="jCB_basic">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="Basic mode"/>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
@@ -163,13 +171,8 @@
                               </Group>
                               <EmptySpace min="-2" pref="22" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="jTF_BeamEnergy_" alignment="0" min="-2" pref="54" max="-2" attributes="0"/>
-                                          <Component id="jTF_ImageSize_" min="-2" pref="54" max="-2" attributes="0"/>
-                                      </Group>
-                                      <EmptySpace min="100" pref="100" max="-2" attributes="0"/>
-                                  </Group>
+                                  <Component id="jTF_BeamEnergy_" alignment="0" min="-2" pref="54" max="-2" attributes="0"/>
+                                  <Component id="jTF_ImageSize_" min="-2" pref="54" max="-2" attributes="0"/>
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="jTF_ImageTreshold_" min="-2" pref="54" max="-2" attributes="0"/>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -430,7 +433,7 @@
                           </Group>
                           <Component id="jB_Reload" min="-2" pref="23" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="jLabel5" alignment="3" min="-2" pref="12" max="-2" attributes="0"/>
                           <Component id="jTF_patternSize" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -453,7 +456,7 @@
                                   <Component id="jRB_mus" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="jRB_ms" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
-                              <EmptySpace pref="14" max="32767" attributes="0"/>
+                              <EmptySpace pref="13" max="32767" attributes="0"/>
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="jTF_NScans" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -574,6 +577,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="jTF_patternSize">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="text" type="java.lang.String" value="5"/>
                 <Property name="nextFocusableComponent" type="java.awt.Component" editor="org.netbeans.modules.form.ComponentChooserEditor">
                   <ComponentRef name="jB_BuildAndSend_"/>
@@ -723,7 +727,6 @@
                       <EmptySpace max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jCheckBox_showFlux" min="-2" max="-2" attributes="0"/>
-                          <Component id="jCB_basic" min="-2" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -750,9 +753,7 @@
                           <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="jB_send" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="jCB_basic" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
                       <Component id="jCheckBox_showFlux" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
@@ -780,17 +781,9 @@
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jB_sendActionPerformed"/>
               </Events>
             </Component>
-            <Component class="javax.swing.JCheckBox" name="jCB_basic">
-              <Properties>
-                <Property name="text" type="java.lang.String" value="Basic mode"/>
-              </Properties>
-            </Component>
             <Component class="javax.swing.JCheckBox" name="jCheckBox_showFlux">
               <Properties>
                 <Property name="text" type="java.lang.String" value="show data flux"/>
-                <Property name="nextFocusableComponent" type="java.awt.Component" editor="org.netbeans.modules.form.ComponentChooserEditor">
-                  <ComponentRef name="default"/>
-                </Property>
               </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel_timeout">
